fixed overflow for brave/opera browsers

--- a/style.css
+++ b/style.css
@@ -261,6 +261,7 @@ textarea {
 .card {
     background-color: #282b30;
     overflow-y: hidden;
+    overflow-x: hidden;
     width: 100%;
     border: 2.5px solid #36393e;
     margin-bottom: 5px;
